--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-google-login": "^5.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-tracked": "^1.7.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
