--- a/package.json
+++ b/package.json
@@ -48,5 +48,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "engines": {
+    "node": ">=12.x",
+    "yarn": ">=1.22.x"
   }
 }
