--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,18 +3,31 @@
   "name": "Working hours on the google calendar",
   "icons": [
     {
+      "src": "android-chrome-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "maskable"
+    },
+    {
+      "src": "android-chrome-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    },
+    {
       "src": "favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
-    },
-    {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
     }
   ],
-  "start_url": ".",
-  "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "start_url": "/",
+  "display": "fullscreen",
+  "theme_color": "#333333",
+  "background_color": "#333333",
+  "url": "/",
+  "manifestUrl": "manifest.json",
+  "lang": "en",
+  "orientation": "portrait",
+  "description": "My hours app",
+  "scope": "/",
+  "prefer_related_applications": true
 }
